2006-12-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Removing. 

	* src/hildon-volumebar-range.c:
	* src/hildon-volumebar-range.h: Cleaning up HildonVolumebarRange.

2006-12-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO:
	* src/hildon-find-toolbar-private.h:
	* src/hildon-find-toolbar.c:
	* src/hildon-find-toolbar.h: Cleaning up HildonFindToolbar.

2006-12-13  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO:
	* src/hildon-program-private.h:
	* src/hildon-program.c:
	* src/hildon-program.h: Cleaning up HildonProgram.

2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: 
	* src/hildon-hvolumebar.c:
	* src/hildon-hvolumebar.h: Cleaning up.

	* src/hildon-vvolumebar.c: Defines fixes.

2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Removing cleaned stuff.

	* src/hildon-volumebar.h: Cosmetic.

	* src/hildon-vvolumebar.c: 
	* src/hildon-vvolumebar.h: Cleaning.

2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Adding more TODO.

	* src/hildon-volumebar-private.h:
	* src/hildon-volumebar.c:
	* src/hildon-volumebar.h: Cleaning up.

	* src/hildon-hvolumebar.c:
	* src/hildon-vvolumebar.c: Adjusting for changes in volumebar.
	
	* src/hildon-window-private.h:
	* src/hildon-window.c:
	* src/hildon-window.h: Adding the G_GNUC_CONST keyword, some more
	layouting tweaks.

2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Adding a TODO file.

2006-12-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window-private.h:
	* src/hildon-window.c:
	* src/hildon-window.h: Correcting the coding style. Correcting the
	identing. Modyfying to use standard gobject set_private thingies.
	Making the private API not exported to symbols.

2006-12-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* pkgconfig/hildon.pc.in: